fix long words in subreddit description overflowing div

--- a/packages/web/src/modules/subreddit/sidebar/subredditDescription/ui/SubredditDescription.scss
+++ b/packages/web/src/modules/subreddit/sidebar/subredditDescription/ui/SubredditDescription.scss
@@ -4,6 +4,8 @@
 .sub-description {
   @include theme-aware("color", "text-main");
   font-size: 14px;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 .member-count {
